data/all_generated_tests/raw_wast_tests/loop_StackCorruption_361.wast
;; 2. **Test Description:**    - Validate loop execution where using `br` instruction repeatedly.    - **Constraint Checked:** Correct reinitialization and stack restoration with `br`.    - **Relation to Stack Corruption:** Verify that branched to loop does not corrupt stack by leaving inconsistent values.    ```wasm    (module      (func (export "test") (result i32)        (local i32)        i32.const 0        loop (result i32)          i32.const 1          local.set 0          (local.get 0)          br 0        end        i32.const 1)     )    ```

(assert_invalid
  (module
    (func $loop-br-test (result i32)
      (local i32)
      i32.const 0
      loop (result i32)
        i32.const 1
        local.set 0
        local.get 0
        br 0
      end
      i32.const 1)
  )
  "type mismatch"
)